somebotweb/static/css/style.css
html {
  position: relative;
  min-height: 100%;
}
body {
  background-color: #444;
  /* Margin bottom by footer height */
  margin-bottom: 50px;
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
  height: 50px;
  text-align: center;
}
.thumbnail {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 10px;
  text-align: center;
  background-color: #efefef;
  vertical-align: top;
}
.btn-default {
  background-color: #efefef;
}
.thumbnail .overview {
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 10px;
}
.buttongroup {
  text-align: center;
  padding-top: 5px;
}
.caption {
  text-align: left;
}
.center {
  margin: 0 auto;
  float: none;
}
p {
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  text-indent: 3em;
}
h3, h2 {
  border-bottom: 1px solid #dedede;
  text-align: center;
}
.mapname {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

